--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <link rel="shortcut icon" type="image/png" href="Resources/images/NodeStock-icon.png">
+      <link rel="stylesheet" href="Resources/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
       {{!-- Typewriter.js is used to animate text typing on homepage --}}
@@ -20,6 +21,9 @@
       .error-template {padding: 40px 15px;text-align: center;}
       .error-actions {margin-top:15px;margin-bottom:15px;}
       .error-actions .btn { margin-right:10px; }
+      .noUnderLine {
+         text-decoration: none !important
+      }
    </style>
    <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
