adding some text to about.handlebars

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -60,7 +60,9 @@
             <p class="card-text">For doing that, NodeStock makes an Asnyc call to API endpoints. It then aggregates the data received in response, does some data-marshalling for displaying them and also does some data-processing for drawing beautiful Visualizer graphs.</p>
             <h5 class="card-title">Technologies Used:</h5>
             <p class="card-text">NodeStock is a <strong>nodejs</strong> app. For handling the routes, it uses <strong>expressjs</strong> framework. For displaying the data and rendering of views (HTML Pages) it uses <strong>express-handlebars</strong>. It uses <strong>HighCharts</strong> for drawing beautiful line charts for Stock Trend Visualizer. All frontend components are <strong>Bootstrap</strong> Components. NodeStock also uses <strong>some custom CSS</strong>, font library of <strong>font-awesome 4</strong> and some <strong>client side Javascript</strong> too.</p>
-            <p class="card-text">Even though I have used Bootstrap in NodeStock, I feel NodeStock can further be improved for responsiveness devices with small screens. So, for now, I request to use NodeStock on PCs.</p>
+            <p class="card-text">Even though I have used Bootstrap in NodeStock, I feel NodeStock can further be improved in responsiveness for devices with small screens. So, for now, I would recommend you to use NodeStock on a PC.</p>
+            <h5 class="card-title">Have Some Feedback/Suggestions for NodeStock?</h5>
+            <p class="card-text">Feel free to connect with me on LinkedIn or you can Email me your feedback/suggestions. Link for my LinkedIn profile and Email Address are in "About Developer" section above. I would love to know your feedback and suggestions.</p>
             <h5 class="card-title">Want to Contribute to NodeStock? Check out the Repository below and create a Pull Request. I would love to see NodeStock improve.</h5>
             <a href="https://github.com/kshitizified/nodestock" class="noUnderLine" target="_blank"><button type="button" class="btn btn-outline-danger">
             NodeStock Repository on Github <i class="fa fa-github fa-lg"  aria-hidden="true" ></i>
